# hass-frigate-notifications

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  hacs.json  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  tests.yml  validate.yml
custom_components/: __init__.py
custom_components/frigate_notifications/: __init__.py  action_presets.py  actions.py  binary_sensor.py  button.py  config.py  config_flow.py  const.py  data.py  datetime.py  diagnostics.py  dispatcher.py  entity_base.py  enums.py  filters.py  frigate_config.py  manifest.json  media.py  message_builder.py  models.py  processor.py  repairs.py  sensor.py  services.py  services.yaml  switch.py
custom_components/frigate_notifications/flows/: helpers.py  options.py
custom_components/frigate_notifications/presets/: __init__.py  templates.yaml
custom_components/frigate_notifications/providers/: __init__.py  android_tv.py  base.py  mobile_app.py  (+1 more)
dev/: preconfig.sh
docs/: examples.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/configuration/: profiles.md
docs/examples/: delivery.md  filtering.md  index.md  templates.md
docs/guides/: index.md
docs/reference/: actions.md  context-variables.md  filtering.md  global-defaults.md  index.md  logging.md  notification-lifecycle.md  presets.md  profiles.md  providers.md  templates.md
docs/setup/: getting-started.md
scripts/: setup.sh  simulate_review.py  tail_notifications.sh
tests/: __init__.py  conftest.py  factories.py  flow_helpers.py  payloads.py  test_action_presets.py  test_actions.py  test_config.py  test_config_flow.py  test_data.py  test_diagnostics.py  test_dispatcher.py  test_enums.py  test_filters.py  test_flow_context.py  test_flow_helpers.py  test_frigate_config.py  test_helpers.py  test_init.py  test_message_builder.py  test_models.py  test_notification_assembly.py  test_options_flow.py  test_presets.py  test_processor.py  test_profile_reconfigure.py  test_profile_wizard.py  test_providers.py  test_repairs.py  test_sensor.py  test_services.py  test_silence_entities.py  test_step_modules.py  test_switch.py  test_translations.py
(+36 files in other folders)
